correctif contraste

--- a/style.css
+++ b/style.css
@@ -775,8 +775,7 @@ h4 {
 }
 
 .tc-white {
-    color: #000000!important;
-    background-color: lightgrey;
+    color: white;
 }
 
 .btn-atomic-tangerine {
